Cambios en texto

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h1>Portafolio Personal</h1>
-          <h2>Estudiante de Ingeniería en Informática con pasión por Python</h2>
+          <h2>Estudiante de Ingeniería en Informática con pasión por Python. Quieres saber más de mi?</h2>
       
           <span class="d-flex justify-content-center justify-content-lg-start">
             <a href="#contact" class="btn-get-started scrollto">Contacto</a>
@@ -125,7 +125,7 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Mis principales estudios estan relacionados a DUOC UC, pero dedico mi tiempo libre al estudio de otras ramas e intereses a través de Platzi y Udemy.
+              Mis principales estudios los realizo en DUOC UC, aunque también dedico parte de mi tiempo libre al estudio de otras ramas e intereses a través de Platzi y Udemy. Quieres ver mi portafolio de diplomas de Platzi?
             </p>
             <a href="https://platzi.com/p/nico.contrerasi/" target="_blank" class="btn-learn-more">Ver Portafolio Platzi</a>
           </div>
@@ -144,7 +144,7 @@
           <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
             <h3>Skills y aptitudes</h3>
             <p class="fst-italic">
-              Lenguajes, frameworks y habilidades en los cuales me estoy especializando.
+              Lenguajes, frameworks y habilidades en los cuales me desarrollo día a día.
             </p>
 
             <div class="skills-content">
@@ -271,6 +271,7 @@
             <div class="portfolio-info">
               <h4>Python | Twitter</h4>
               <p>Buscador de palabras clave</p>
+              <p>Este buscador permite analizar palabras repetidas </p>
               <a href="https://github.com/nicontrerasi/give_me_tweets.git" target="_blank" data-gallery="portfolioGallery" title="Give Me Tweets"><i class="bx bxl-github"></i></a>
             </div>
           </div>
