--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h1>Portafolio Personal</h1>
-          <h2>Estudiante de Ingeniería en Informática con pasión por Python. Quieres saber más de mi?</h2>
+          <h2>Estudiante de Ingeniería en Informática con pasión por Python.</h2>
+          <h2>Quieres saber más de mi?</h2>
       
           <span class="d-flex justify-content-center justify-content-lg-start">
             <a href="#contact" class="btn-get-started scrollto">Contacto</a>
