--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
         <div class="row content">
           
-          <div class="col-lg-12">
+          <div class="col-lg-12" text-align="center">
             <p>
               Entre mis pasatiempos más frecuentes están escuchar música, salidas con familia y/o amigos, surf y bicicleta.
             </p>
