--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
         <div class="section-title">
           <h2>Experiencia y Estudios</h2>
-          <p>Dentro de mi experciencia profesional, destaco por tener altos niveles de auto aprendizaje, ordenado y metódico, además de adaptarme 
+          <p>Dentro de mi experciencia profesional, he destacado por tener altos niveles de auto aprendizaje, ordenado y metódico, además de adaptarme 
             rápidamente a diferentes equipos de trabajo y proyectos</p>
         </div>
 
@@ -275,7 +275,7 @@
             <div class="portfolio-info">
               <h4>Python | Twitter</h4>
               <p>Buscador de palabras clave</p>
-              <p>Este buscador permite analizar palabras repetidas </p>
+              <p>Este buscador permite analizar palabras repetidas en tweets</p>
               <a href="https://github.com/nicontrerasi/give_me_tweets.git" target="_blank" data-gallery="portfolioGallery" title="Give Me Tweets"><i class="bx bxl-github"></i></a>
             </div>
           </div>
@@ -284,7 +284,7 @@
             <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Python | Scraping</h4>
-              <p>Scrap a tabla de posiciones desde diario AS.COM</p>
+              <p>Scrap a tabla de posiciones desde diario AS.COM con la tabla de posiciones del futbol español</p>
               <a href="https://github.com/nicontrerasi/clasificatoria.git" target="_blank" data-gallery="portfolioGallery" title="Scraping"><i class="bx bxl-github"></i></a>
             </div>
           </div>
@@ -294,6 +294,7 @@
             <div class="portfolio-info">
               <h4>Python</h4>
               <p>Genera lista de nombres de forma aleatoria</p>
+              <p>Proyecto basado en una pagina de sorteos</p>
               <a href="https://github.com/nicontrerasi/random.git" target="_blank" data-gallery="portfolioGallery" title="Clasificatoria"><i class="bx bxl-github"></i></a>
             </div>
           </div>
@@ -303,6 +304,7 @@
             <div class="portfolio-info">
               <h4>Python</h4>
               <p>Juego del ahorcado</p>
+              <p>Este juego contiene una lista de palabras que van saliendo de forma aleatoria, donde el jugador debe ir agregando letras para adivinar la palabra antes de que las vidas acaben</p>
               <a href="https://github.com/nicontrerasi/ahorcado.git" target="_blank" data-gallery="portfolioGallery" title="Juego ahorcado"><i class="bx bxl-github"></i></a>
             </div>
           </div>
@@ -353,7 +355,7 @@
 
         <div class="section-title">
           <h2>Contacto</h2>
-          <p>En este momento me encuentro en búsqueda de mi primera experiencia laboral como Back-End o cargo relacionado a lenguaje Python.</p>
+          <p>En este momento me encuentro en búsqueda de mi primera experiencia laboral. Idealmente como Back-End o cargo relacionado a lenguaje Python.</p>
         </div>
 
         <div class="row">
