--- a/index.html
+++ b/index.html
@@ -239,6 +239,14 @@
             </div>
           </div>
       </div>
+        <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-buildings"></i></div>
+              <h4><a href="">U. Santo Tomás</a></h4>
+              <h6><a href="">2010 - 2015</a></h6>
+              <p>Titulado de Ingeniería en Administración de Recursos Humanos</p>
+            </div>
+          </div>
     </section>
 
     <section id="portfolio" class="portfolio">
