--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
         <div class="section-title">
           <h2>Experiencia y Estudios</h2>
-          <p>Dentro de mi experciencia profesional, he destacado por tener altos niveles de auto aprendizaje, ordenado y metódico, además de adaptarme 
+          <p>Dentro de mi experciencia profesional, destaco por tener altos niveles de auto aprendizaje, ordenado y metódico, además de adaptarme 
             rápidamente a diferentes equipos de trabajo y proyectos</p>
         </div>
 
@@ -238,8 +238,8 @@
               <p>Administrador de Recursos Humanos</p>
             </div>
           </div>
-      </div>
-        <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
+
+          <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-buildings"></i></div>
               <h4><a href="">U. Santo Tomás</a></h4>
@@ -247,6 +247,10 @@
               <p>Titulado de Ingeniería en Administración de Recursos Humanos</p>
             </div>
           </div>
+
+        </div>
+
+      </div>
     </section>
 
     <section id="portfolio" class="portfolio">
