--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
             <div class="skills-content">
 
               <div class="progress">
-                <span class="skill">PYTHON <i class="val">50%</i></span>
+                <span class="skill">PYTHON <i class="val">60%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
 
@@ -175,16 +175,16 @@
               </div>
 
               <div class="progress">
-                <span class="skill">TRABAJO EN EQUIPO <i class="val">80%</i></span>
+                <span class="skill">FLASK FRAMEWORK <i class="val">50%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
 
               <div class="progress">
-                <span class="skill">GITHUB <i class="val">60%</i></span>
+                <span class="skill">GITHUB <i class="val">50%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div>
               <div class="progress">
