Update about me section

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Mis principales estudios los realizo en DUOC UC, aunque también dedico parte de mi tiempo libre al estudio de otras ramas e intereses a través de Platzi y Udemy. Quieres ver mi portafolio de diplomas de Platzi?
+              Mis principales estudios los realizo en DUOC UC, aunque también dedico parte de mi tiempo libre al estudio de otras ramas e intereses a través de Platzi y Udemy. Quieres ver mi portafolio de cursos de Platzi?
             </p>
             <a href="https://platzi.com/p/nico.contrerasi/" target="_blank" class="btn-learn-more">Ver Portafolio Platzi</a>
         </div>
