--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <a href="#contact" class="btn-get-started scrollto">Contacto</a>
           </span>
           <span class="d-flex justify-content-center justify-content-lg-start">
-            <a href="https://duoccl0-my.sharepoint.com/:b:/g/personal/nico_contrerasi_duocuc_cl/EfdqmfPcNPNGrv_lUsoFixQBgdoW3xMG8TnRNxOQso5CKg?e=c0Pg5m" download="CV_Nicolas_Contreras" target="_blank" class="btn-get-started scrollto">Descargar CV</a>
+            <a href="https://duoccl0-my.sharepoint.com/:b:/g/personal/nico_contrerasi_duocuc_cl/ERWSKkKpzQNPpAfztTnlXecB7Gnt-c0mu0K0sWHXEhleQw?e=11es7F" download="CV_Nicolas_Contreras" target="_blank" class="btn-get-started scrollto">Descargar CV</a>
           </span>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
